# nav

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  LIVOX_DRIVER_ANALYSIS.md  README.en.md  README.md  ROS2配置流程.md  SentryNX.md  acados_ocp.json  build.sh  debug.txt  frames_2026-02-09_13.38.15.gv  git.md  map.pgm  map.yaml  start.sh  tuishao  tuishao.sh  代码笔记.md  导航录制并使用地图流程说明.wps  导航录制点云和地图流程说明.docx  注意.txt  非线性优化器.md
src/RMUC/robomaster_sentry_decision/: CMakeLists.txt  package.xml
src/RMUC/robomaster_sentry_decision/config/: sentry_decision_params.yaml
src/RMUC/robomaster_sentry_decision/msg/: SentryControl.msg
src/RMUC/robomaster_sentry_decision/src/: Blackboard.cpp  DecisionManager.cpp  Models.cpp  RegionManager.cpp  main.cpp
src/RMUL/decision_messages/: CMakeLists.txt  package.xml  status.json
src/localization/localization_initializer/: CMakeLists.txt  README.md  package.xml  重定位使用.md
src/localization/localization_initializer/config/: initializer_params.yaml
src/localization/localization_initializer/launch/: localization_init.launch.py
src/localization/localization_initializer/rviz/: localization_init.rviz
src/localization/localization_initializer/scripts/: diagnose_rviz.sh
src/localization/localization_initializer/src/: localization_initializer_node.cpp
src/mapping/pointcloud_obstacle_layer/: CMakeLists.txt  package.xml
src/mapping/pointcloud_obstacle_layer/config/: legged_local_obstacle.yaml
src/mapping/pointcloud_obstacle_layer/src/: local_obstacle_grid_node.cpp  pointcloud_segmentation_node.cpp
src/mapping/rog_map_ros2_node/: CMakeLists.txt  README.md  README_TUNER.md  STAIR_DETECTOR_V3_UPGRADE.md  STAIR_V3_QUICK_REF.md  package.xml  test_publisher.py
src/mapping/rog_map_ros2_node/config/: perception_config.yaml  projector_omni.yaml  projector_params.yaml  projector_params.yaml.bak  rog_map_config.yaml  rog_map_omni.yaml  stair_detector_config.yaml  stair_detector_omni.yaml  stair_detector_params.yaml
src/mapping/rog_map_ros2_node/launch/: base_height_calibrator.launch.py  integration.launch.py  lidar_roll_calibrator.launch.py  perception.launch.py  perception_intraprocess.launch.py  rog_map.launch.py
src/mapping/rog_map_ros2_node/msg/: StairTarget.msg
src/mapping/rog_map_ros2_node/rviz/: rog_map.rviz
src/mapping/rog_map_ros2_node/scripts/: stair_tuner_gui.py  start_tuner.sh
src/mapping/rog_map_ros2_node/src/: base_height_calibrator.cpp  integration_component.cpp  lidar_roll_calibrator.cpp  map_2d_projector.cpp  obstacle_perception.cpp  rog_map_component.cpp  rog_map_node.cpp  stair_detector.cpp
src/mapping_and_location/localization/: CMakeLists.txt  package.xml  relocalization.rviz  results.txt
src/mapping_and_location/localization/launch/: localization.launch.py
src/mapping_and_location/localization/src/: converge.cpp  relocalization.cpp
src/my_navigation/nav_bringup/: CMakeLists.txt  package.xml
src/my_navigation/nav_bringup/config/: nav_params.yaml  nav_params_omni.yaml  stair_detector_params.yaml
src/my_navigation/nav_bringup/launch/: navigation.launch.py  navigation_omni.launch.py  run.launch.py  run_omni.launch.py
src/my_navigation/nav_bringup/maps/: RMUC_final.yaml  RMUC_final_no_slope.pgm  RMUC_final_no_slope1.pgm  RMUC_final_stair.pgm  RMUC_final_stair.yaml  map.pgm  map.yaml  map1.pgm  map3.pgm  map3.yaml  map4.pgm  stair.pgm  stair.yaml  stair1.pgm  test_map.yaml
src/my_navigation/nav_bringup/rviz/: navigation.rviz  navigation_full.rviz
src/my_navigation/nav_bringup/scripts/: gimbal_yaw_tf_publisher.py  odom_base_debug_rebaser.py  omni_cmd_adapter.py  omni_stage3_check.py  static_relocator.py
src/my_navigation/nav_components/: CMakeLists.txt  package.xml
src/my_navigation/nav_components/config/: nmpc_params.yaml
src/my_navigation/nav_components/model_ocp/: acados_ocp.json  export_ocp.py  model.py  nmpc_config.yaml  nmpc_config_loader.py  nmpc_interface.py  requirements.txt
src/my_navigation/nav_components/nmpc_solver/: Makefile  acados_sim_solver_wheelleg_nmpc.c  acados_sim_solver_wheelleg_nmpc.h  acados_solver_wheelleg_nmpc.c  acados_solver_wheelleg_nmpc.h  main_sim_wheelleg_nmpc.c  main_wheelleg_nmpc.c
src/my_navigation/nav_components/src/: arc_backup_recovery.cpp  backup_recovery.cpp  dynamic_obstacle_tracker.cpp  layered_map_manager.cpp  nav_server.cpp  nmpc.cpp  recovery_manager.cpp  simple_planner.cpp  spin_recovery.cpp  stair_controller.cpp  two_point_patrol_node.cpp
src/my_navigation/nav_core/: package.xml
src/mybringup/: CMakeLists.txt  package.xml
src/mybringup/config/: controller.yaml  costmap2d.yaml  my_nav_through_poses_bt.xml  my_nav_to_pose_bt.xml  nav_bt.yaml  navigation_mode.yaml  planner.yaml  recoveries.yaml  tf_ekf.yaml
src/mybringup/launch/: mapping.launch.py  pubmap.launch.py  run_nav.launch.py  test_run_nav.launch.py
src/mybringup/map/: 309.pgm  309.yaml  RMUC.pgm  RMUC_final.pgm  WUST.pgm  changzhou.pgm  jinan.pgm  jinan.yaml  map.pgm  map.yaml  map_5.pgm  map_5.yaml  rmuc.pgm  rmuc.yaml  rmul1-1.pgm  rmul1-1.xcf  rmul1.pgm  rmul1.yaml  rmul_2025.yaml  toprun.pgm
src/mybringup/rviz/: nav.rviz  test.rviz
src/mybringup/scripts/: initialpose_static_tf_node.py
src/mybringup/urdf/: sentry.urdf  test.urdf  test1.urdf
src/mybringup/xacro/: my_head.xacro  sentry.xacro  sentry_move.xacro
src/mylog/: CMakeLists.txt  package.xml
src/mylog/scripts/map/: map.pgm  (+1 more)
src/mylog/src/: mylog.py  output.json  recordlog.cpp
src/mynav2/my_nav2_plugins/: CMakeLists.txt  package.xml  plugin.xml
src/myserial/: CMakeLists.txt  package.xml  rtt_measurement_guide.md  serial_communication_guide.md  usb_cdc_buffering.md
src/myserial/launch/: myserial.launch.py
src/myserial/src/: serial_node.cpp
src/mytree/: CMakeLists.txt  TODO.txt  package.xml
src/mytree/config/: footprints.yaml
src/mytree/launch/: mytree.launch.py
src/mytree/src/: mytree.cpp
src/mytree/tree/: RMUL.btproj  maintree.xml
src/robots_msgs/: CMakeLists.txt  package.xml
src/test/robomaster_sentry_decision/: CMakeLists.txt  package.xml
src/tools/play_music/: CMakeLists.txt  package.xml
(+443 files in other folders)
