<?xml version="1.0"?>
<package format="2">
  <name>mylog</name>
  <version>0.0.1</version>
  <description>Package with C++ and Python nodes</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>  <!-- 或者你想写 Private 也可以 -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robots_msgs</depend>
  <depend>tf2_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
 
