<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaVersion="3.0"?>
<package format="3">
  <name>decision_messages</name>
  <version>0.0.0</version>
  <description>Custom messages for RoboMaster decision system</description>
  <maintainer email="chenyan@example.com">Chen Yan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
