<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="150041695+gtx6901@users.noreply.github.com">lehan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>Eigen3</depend>
  <depend>fast_gicp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
