<?xml version="1.0"?>
<package format="3">
  <name>nav_bringup</name>
  <version>0.1.0</version>
  <description>导航系统启动配置</description>
  <maintainer email="lehan@todo.todo">lehan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav_components</exec_depend>
  <exec_depend>localization_initializer</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
