<?xml version="1.0"?>
<package format="3">
  <name>nav_components</name>
  <version>0.1.0</version>
  <description>导航组件实现：规划器、控制器、恢复行为、导航服务器</description>
  <maintainer email="lehan@todo.todo">lehan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_interfaces</depend>
  <depend>nav_core</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
